@@ -57,6 +57,12 @@ FILES = [
     'Core/Uuid.h',
     'Plugins/Samples/Common/ExportedSymbols.list',
     'Plugins/Samples/Common/VersionScript.map',
+    'Plugins/Samples/GdcmDecoder/GdcmImageDecoder.h',
+    'Plugins/Samples/GdcmDecoder/GdcmImageDecoder.cpp',
+    'Plugins/Samples/GdcmDecoder/GdcmDecoderCache.h',
+    'Plugins/Samples/GdcmDecoder/GdcmDecoderCache.cpp',
+    'Plugins/Samples/GdcmDecoder/OrthancImageWrapper.h',
+    'Plugins/Samples/GdcmDecoder/OrthancImageWrapper.cpp',
     'Resources/CMake/AutoGeneratedCode.cmake',
     'Resources/CMake/BoostConfiguration.cmake',
     'Resources/CMake/Compiler.cmake',
