@@ -1,6 +1,10 @@
 Pending changes in the mainline
 ===============================
 
+=> Minimum SDK version: 0.9.5 <=
+
+* The GDCM decoder replaces the built-in Orthanc decoder
+
 
 Version 1.3 (2015-11-27)
 ========================
